reponsive on mobile fix some

--- a/src/sass/base/_grid.scss
+++ b/src/sass/base/_grid.scss
@@ -494,6 +494,10 @@
     .row.touch-on-mobile {
         flex-wrap: nowrap;
         overflow-x: auto;
+
+        &::-webkit-scrollbar {
+            appearance: none;
+        }
     }
 
     
